# JHA-dashboard

./: .env  .gitignore  .pre-commit-config.yaml  ALL_DATA_2023-03-24.csv  ALL_DATA_2023-03-24_ND.csv  Pipfile  README.md  app.py  pyproject.toml  qwp_data.csv
app/: app.py  config.cfg
app/assets/css/: 04_navbar.css  05_sidebar.css
app/components/: __init__.py  layout.py  navbar.py  sidebar.py
app/utils/: callbacks.py  common.py  data.py  settings.py
assets/css/: 01_style.css  01style.css  02common.css  02custom.css  03style.css  06_tiles.css
components/: __init__.py  index.py  layout.py  navbar.py  sidebar.py
data/: FLAXVILLE_STAID_METADATA.csv  JHA_STAID_INFO.csv  JHA_STAID_METADATA-old.csv  JHA_STAID_METADATA.csv  flaxville_stations.csv  mapbox_token.txt
docs/: JHA_parameter_codes.csv  finding p codes.xlsx  flaxville_stations.xlsx  list for Jonathan (1).xlsx  notes.md  siteAndSampleSummaryTable_Flaxville.xlsx
src/: .env  JHA Dashboard.url  app.py  config.cfg  test_code.py  test_code2.py
src/assets/: style.css
src/assets/css/: 03_style.css
src/assets/html/: header.html
src/components/: __init__.py  layout.py  navbar.py  sidebar.py
src/data/: FLAXVILLE_STAID_METADATA.csv  JHA_STAIDS.csv  JHA_STAID_INFO.csv  JHA_STAID_METADATA.csv  site_data.csv
src/utils/: callbacks.py  common.py  data.py  download.py  param_codes.py  settings.py  utils.py
tests/: test_callbacks.py  test_code.py  test_common,py
tests/data/: all_data.csv  dumbbell.csv
utils/: callbacks.py  data.py
