[tool.poetry]
name = "jha-dashboard"
version = "0.1.0"
description = "Data review dashboard for the Jackson Hole Airport, Montana."
authors = ["O'Connell, Jonathan P <joconnell@usgs.gov>"]
readme = "README.md"
packages = [{include = "jha_dashboard"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^1.5.3"
dash = "^2.7.1"
dataretrieval = "^1.0.1"
plotly = "^5.12.0"
dash-bootstrap-components = "^1.3.0"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
nuitka = "^1.5.8"
ipykernel = "^6.23.3"
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
